tests/reject/chan_in_container.ty
# a channel is created only in a declaration -- not nested in a container/arg. Both reject.
fn main():
    cs := [channel(int, 2)]
    print("x")
